--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "module": "./src/index.js",
   "scripts": {
     "build": "rollup -c",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha",
     "format": "prettier --write \"**/*.+(js|jsx|json|yml|yaml|css|md|vue)\"",
     "prepare": "husky install"
   },
@@ -33,6 +33,7 @@
     "husky": "^6.0.0",
     "lint-staged": "^11.0.0",
     "prettier": "^2.3.1",
-    "rollup": "^2.53.2"
+    "rollup": "^2.53.2",
+    "mocha": "^9.0.2"
   }
 }
